--- a/Source/AutoClick_PascalScriptIDE.lpi
+++ b/Source/AutoClick_PascalScriptIDE.lpi
@@ -6,7 +6,7 @@
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="PascalScriptIDE"/>
+      <Title Value="AutoClick_PascalScriptIDE"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -36,7 +36,7 @@
     </RequiredPackages>
     <Units Count="3">
       <Unit0>
-        <Filename Value="PascalScriptIDE.lpr"/>
+        <Filename Value="AutoClick_PascalScriptIDE.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
@@ -58,7 +58,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="PascalScriptIDE"/>
+      <Filename Value="AutoClick_PascalScriptIDE"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
