--- a/Source/AutoClick_PascalScriptIDE.lpi
+++ b/Source/AutoClick_PascalScriptIDE.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="AutoClick_PascalScriptIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -52,6 +52,10 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="UMouseKeyboard"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="uprocess.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
