--- a/Source/AutoClick_PascalScriptIDE.lpi
+++ b/Source/AutoClick_PascalScriptIDE.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="6">
       <Unit0>
         <Filename Value="AutoClick_PascalScriptIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -60,6 +60,11 @@
         <Filename Value="ufiles.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="filesmanager.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="FilesManager"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
