--- a/Source/AutoClick_PascalScriptIDE.lpi
+++ b/Source/AutoClick_PascalScriptIDE.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="6">
+    <Units Count="7">
       <Unit0>
         <Filename Value="AutoClick_PascalScriptIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -65,6 +65,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="FilesManager"/>
       </Unit5>
+      <Unit6>
+        <Filename Value="uscreenmanager.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="UScreenManager"/>
+      </Unit6>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
